Updating config for varnish (out of order)

--- a/config.yaml
+++ b/config.yaml
@@ -80,3 +80,4 @@ profiles:
 # This space below is where custom yaml items (e.g. pinning
 # sandpaper and varnish versions) should live
 varnish: RSE-Sheffield/uos-varnish@main
+url: 'RicCampbell.github.io/FAIR4RS_repos_dois'
